--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,13 @@ body {
 }
 h1{
     color: whitesmoke;
-    margin-top: 50px;
+    margin: 75px 300px 300px;
+    font-size: 50px;
+    font-family: 'Courier New', Courier, monospace;
 }
 p{
-    margin: 100px 100px 100px 200px;
+    margin: 0px 500px 500px 1000px;
     color: whitesmoke;
+    font-size: 30px;
+    font-family: 'Courier New', Courier, monospace;
 }
