--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 h1{
     color: whitesmoke;
-    margin: 75px 300px 300px;
+    margin: 75px 300px 300px 0px;
     font-size: 50px;
     font-family: 'Courier New', Courier, monospace;
 }
