--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,14 @@ body {
 }
 h1{
     color: whitesmoke;
-    margin: 75px 300px 300px 0px;
+    margin-top: 75px;
     font-size: 50px;
     font-family: 'Courier New', Courier, monospace;
+    font-style:normal;
 }
 p{
-    margin: 0px 500px 500px 1000px;
+    margin: 0;
+    padding: 25px;
     color: whitesmoke;
     font-size: 30px;
     font-family: 'Courier New', Courier, monospace;
